[package]
name = "pipe-rename"
version = "1.6.1"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
description = "Rename your files using your favorite text editor"
homepage = "https://github.com/marcusbuffett/pipe-rename"
repository = "https://github.com/marcusbuffett/pipe-rename"
edition = "2018"
keywords = ["cli", "tool", "rename"]
license = "MIT"

[[bin]]
name = "renamer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0.20"
subprocess = "0.2.4"
clap = {version = "3.0.1", features = ["derive"]}
shell-words = "1.0.0"
tempfile = "3.1.0"
dialoguer = "0.6.2"
ansi_term = "0.12.1"
shell-escape = "0.1.5"
diff = "0.1.12"
wild = "2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"

# xref: https://bitshifter.github.io/rr+rust/#11
# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
